samples/_failures_safe/1761536355_1b9ac8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7801b0f2.c: In function ‘main’:
./samples/SAFE/__tmp_7801b0f2.c:146:5: error: expected expression at end of input
  146 |     printf("Processing text: %s\n\n",
      |     ^~~~~~
./samples/SAFE/__tmp_7801b0f2.c:146:5: error: expected declaration or statement at end of input
